--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,5 @@
-spring.datasource.url=jdbc:mysql://localhost:1521/lxtoradb0011?useSSL=false
+spring.jpa.hibernate.ddl-auto=update
+spring.datasource.url=jdbc:mysql://localhost:1521/lxtoradb0011?useUnicode=true&characterEncoding=utf8&createDatabaseIfNotExist=true
 spring.datasource.username=PAOD
 spring.datasource.password=ytg322asdx
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=none
-logging.level.org.hibernate.SQL=debug
